--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html>
 <head>
     <!-- This will show up on the tab in your browser -->
     <title>My Portfolio</title>
@@ -19,3 +20,4 @@
         <h1>Projects</h1>
     </div>
 </body>
+<html>
