--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- This will show up on the tab in your browser -->
-    <title>My Portfolio</title>
+    <title>Sensory Cause and Effect Privacy policy</title>
 
     <!-- This links your css file to the html -->
     <link rel="stylesheet" type="text/css" href="index.css">
