--- a/index.html
+++ b/index.html
@@ -33,16 +33,7 @@ information used to identify you.
 </p> <p>
 Link to the privacy policy of third-party service providers used
 by the app
-</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Unity</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
-We want to inform you that whenever you
-use our Service, in a case of an error in the app
-we collect data and information (through third-party
-products) on your phone called Log Data. This Log Data may
-include information such as your device Internet Protocol
-(“IP”) address, device name, operating system version, the
-configuration of the app when utilizing our Service,
-the time and date of your use of the Service, and other
-statistics.
+</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Unity</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div>
 </p> <p><strong>Service Providers</strong></p> <p>
 We may employ third-party companies and
 individuals due to the following reasons:
